# fd-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/commands/: count-files.md  demo-mcp.md  find-py.md  recent.md  search-code.md
benchmark/: README.md  cleanup.sh  generate_files.py  run_benchmark.sh  setup.sh
fd_mcp/: __init__.py  server.py
