[project]
name = "fd-mcp"
version = "0.2.1"
description = "MCP server for fast file search using fd - a modern find alternative"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Thomas Hartwig"}
]
keywords = ["mcp", "fd", "file-search", "ai", "claude", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/thhart/fd-mcp"
Repository = "https://github.com/thhart/fd-mcp"
Issues = "https://github.com/thhart/fd-mcp/issues"

[project.scripts]
fd-mcp = "fd_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
